--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,17 @@
 <body>
 
   <div class="container">
+
+    <div class="row">
+      <% flash.each do |type, msg| %>
+        <div id="flash_<%= type %>" class="alert alert-<%= type %>"><%= msg %></div>
+      <% end %>
+    </div>
+
     <div class="row">
       <%= yield %>
     </div>
+
   </div>
 
 </body>
