--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,18 @@
 </head>
 <body>
 
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container">
+        <%= link_to 'OpenVDI', root_path, class: 'brand' %>
+        <div class="nav-collapse">
+          <ul class="nav">
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="container">
 
     <div class="row">
