--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,13 @@
             <li><%= link_to "User Management", users_path %></li>
             <% end %>
           </ul>
+          <ul class="nav pull-right">
+            <% if user_signed_in? %>
+              <li><%=link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
+            <% else %>
+              <li><%= link_to "sign in", new_user_session_path %></li>
+            <% end %>
+          </ul>
         </div>
       </div>
     </div>
