use an h1 to show title in body of page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,10 @@
 
   <div class="container">
 
+    <% if content_for? :title %>
+      <h1><%= content_for :title %></h1>
+    <% end %>
+
     <div class="row">
       <% flash.each do |type, msg| %>
         <% type = case type
