--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,10 @@
         <div class="nav-collapse">
           <ul class="nav">
             <% permitted_to? :manage, :users do %>
-            <li><%= link_to "User Management", users_path %></li>
+            <li><%= link_to "Users", users_path %></li>
+            <% end %>
+            <% permitted_to? :manage, :templates do %>
+            <li><%= link_to "Templates", templates_path %></li>
             <% end %>
           </ul>
           <ul class="nav pull-right">
