show edit/destroy links based on current user permissions

--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -14,8 +14,8 @@
     <td><%= template.name %></td>
     <td><%= template.description %></td>
     <td><%= link_to 'Show', template %></td>
-    <td><%= link_to 'Edit', edit_template_path(template) %></td>
-    <td><%= link_to 'Destroy', template, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Edit', edit_template_path(template) if permitted_to?(:update, template, context: :templates) %></td>
+    <td><%= link_to 'Destroy', template, method: :delete, data: { confirm: 'Are you sure?' } if permitted_to?(:destroy, template, context: :templates) %></td>
   </tr>
 <% end %>
 </table>
